--- a/mathly/src/styles/Input.css
+++ b/mathly/src/styles/Input.css
@@ -7,15 +7,56 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    margin-top: 35%;
+    margin-top: 32.5vh;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5em;
+    height: 100%;
 }
 
 .input {
     
-    height: 40px;
-    width: 500px;
+    /* height: 80px; */
+    width: 85%;
     background-color: transparent;
     border-style: none;
     margin: 0 auto;
-    
+    color: rgb(223, 223, 223);
+    font-family: 'Roboto', sans-serif;
+    font-size: 27px;
+    margin-top: 10%;
+}
+
+textarea {
+    resize: none;
+    overflow: hidden;
+    min-height: 50px;
+    max-height: 100px;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+.bottom-line {
+    margin: 0 auto;
+    height: 3px;
+    width: 85%;
+    background-color: rgb(62, 62, 62);
+    border-radius: 7px;
+    /* margin-bottom: 10%; */
+}
+
+.send-btn {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border-style: none;
+    background-color: rgb(67, 67, 67);
+    margin-left: 87%;
+    /* margin-top: 5%; */
+
 }
