--- a/mathly/src/styles/Input.css
+++ b/mathly/src/styles/Input.css
@@ -19,7 +19,7 @@
 
 .input {
     
-    /* height: 80px; */
+    height: 40px;
     width: 85%;
     background-color: transparent;
     border-style: none;
@@ -27,14 +27,7 @@
     color: rgb(223, 223, 223);
     font-family: 'Roboto', sans-serif;
     font-size: 27px;
-    margin-top: 10%;
-}
-
-textarea {
-    resize: none;
-    overflow: hidden;
-    min-height: 50px;
-    max-height: 100px;
+    margin-top: 14%;
 }
 
 textarea:focus, input:focus{
@@ -57,6 +50,5 @@ textarea:focus, input:focus{
     border-style: none;
     background-color: rgb(67, 67, 67);
     margin-left: 87%;
-    /* margin-top: 5%; */
-
+    cursor: pointer;
 }
